--- a/Skill_CodeFirstEntity.csproj
+++ b/Skill_CodeFirstEntity.csproj
@@ -194,6 +194,7 @@
     <Content Include="Views\Default\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutNavBar.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\NewSkill.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
