--- a/Skill_CodeFirstEntity.csproj
+++ b/Skill_CodeFirstEntity.csproj
@@ -195,6 +195,7 @@
     <Content Include="Views\Shared\_LayoutNavBar.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\NewSkill.cshtml" />
+    <Content Include="Views\Admin\SkillUpdate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
